@@ -995,7 +995,7 @@ class NetworkConnectionAttributesTest(SocketTCPTest, ThreadableTest):
         ThreadableTest.__init__(self)
 
     def clientSetUp(self):
-        pass
+        self.source_port = test_support.find_unused_port()
 
     def clientTearDown(self):
         self.cli.close()
@@ -1009,6 +1009,19 @@ class NetworkConnectionAttributesTest(SocketTCPTest, ThreadableTest):
     def _testFamily(self):
         self.cli = socket.create_connection((HOST, self.port), timeout=30)
         self.assertEqual(self.cli.family, 2)
+
+    testSourcePort = _justAccept
+    def _testSourcePort(self):
+        self.cli = socket.create_connection((HOST, self.port), timeout=30,
+                source_address=('', self.source_port))
+        self.assertEqual(self.cli.getsockname()[1], self.source_port)
+
+    testSourceAddress = _justAccept
+    def _testSourceAddress(self):
+        self.cli = socket.create_connection(
+                (HOST, self.port), 30, ('127.0.0.1', self.source_port))
+        self.assertEqual(self.cli.getsockname(),
+                         ('127.0.0.1', self.source_port))
 
     testTimeoutDefault = _justAccept
     def _testTimeoutDefault(self):
